[package]
name = "capstan"
version = "0.0.3"
authors = ["Jonathan Merritt <j.s.merritt@gmail.com>"]
edition = "2021"
license = "MIT"
description = "NURBS library with a CAD focus"
homepage = "https://github.com/lancelet/capstan/"
repository = "https://github.com/lancelet/capstan/"
documentation = "https://docs.rs/capstan"
keywords = ["NURBS", "graphics", "CAD"]
categories = ["algorithms", "graphics", "mathematics"]
readme = "README.md"

[dependencies]
alga = "0.9"
approx = "0.5"
nalgebra = "0.29"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
svg = "0.8"
proptest = "0.10"