[package]
name = "capstan"
version = "0.0.4"
authors = ["Jonathan Merritt <j.s.merritt@gmail.com>"]
edition = "2021"
license = "MIT"
description = "NURBS library with a CAD focus"
homepage = "https://github.com/lancelet/capstan/"
repository = "https://github.com/lancelet/capstan/"
documentation = "https://docs.rs/capstan"
keywords = ["NURBS", "graphics", "CAD", "splines", "curves"]
categories = ["algorithms", "graphics", "mathematics", "multimedia"]
readme = "README.md"

[dependencies]
alga = "0.9"
approx = "0.5"
is_sorted = { version = "0.1" }
nalgebra = "0.32"
num-traits = "0.2"
thiserror-no-std = "2.0"

[dev-dependencies]
proptest = "1.1.0"
svg = "0.13.0"

[features]
default = []
unstable = ["is_sorted/unstable"]
